<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="statistics.StatisticsActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/Toolbar" />

    <ImageView
        android:id="@+id/no_statistics_placeholder"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_statistics_100dp" />

    <TextView
        android:id="@+id/no_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_statistics_placeholder"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        android:text="@string/no_statistics_available"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>