<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/statistics_navigation_menu_item"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics_title" />
</menu>